Añadido footer y estilado para movil

--- a/index.html
+++ b/index.html
@@ -61,11 +61,13 @@
 <footer>
     <div class="avatar">
         <img src="img/avatar.jpg" width='160' height='160' alt="Jordi Pàmies">
-        <p>Jordi Pàmies</p>
-        <a href="https://twitter.com/jpcpamies">@jpcpamies</a>
+        <p><strong>Jordi <br>Pàmies</strong></p>
     </div>
-    <a href="mailto:jordipamies2@gmail.com"><div class="contacto">Contacto</div></a>
-    <a href="https://github.com/jpcpamies" target='blanck'><div class="github">Github</div></a>
+    <div class="social">
+        <a class='twitter' href="https://twitter.com/jpcpamies" target="_blank">@jpcpamies</a>
+        <a class='github' href="https://github.com/jpcpamies" target="_blank">/jpcpamies</a>
+        <a class='email' href="mailto:jordipamies2@gmail.com">jpcpamies@me.com</a>
+    </div>
 </footer>
 
 
