--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
     <h1>IniciaGit</h1>
     <h2>Hacer un commit es como pegar un tiro</h2>
 </header>
-<nav>
+<nav class="menu">
+<div class="lista"></div>
     <ul id='mobileMenu'>
-        <Li><a href="#">Iniciando</a></Li>
-        <Li><a class='capitulo' href="#">Empezando con Github</a></Li>
-        <li><a href="#">Crear una cuenta de Github</a></li>
-        <li><a href="#">Instalar GitHub</a></li>
+        <Li><a href="#uno">Iniciando</a></Li>
+        <Li><a class='capitulo' href="#dos">Empezando con Github</a></Li>
+        <li><a href="#tres">Crear una cuenta de Github</a></li>
+        <li><a href="#cuatro">Instalar GitHub</a></li>
         <li><a href="#">Identificarse como usuario</a></li>
         <li><a href="#">Vincular el ordenador con GitHub por SSH</a></li>
         <li><a href="#">Resumen de comandos</a></li>
@@ -46,7 +47,40 @@
     </ul>
 </nav>
 <section>
-    <article>
+    <article id='uno'>
+        <div class="encabezado">
+            <span class=''></span>
+            <h3>Iniciando</h3>
+        </div>
+        <div class="contenido">
+            <p>Esta guía básica te ayudará a <strong>usar GitHub con la terminal</strong> desde cero. En ella encontrarás un resumen de los pasos y comandos básicos necesarios para empezar a trabajar con GitHub desde tu ordenador con la terminal. Tanto si ya usas GitHub como si empiezas hoy mismo esta guía</p>
+            <p>Con esta guía empezarás un proyecto propio en local y subirás cambios a tu repositorio en GitHub. <strong>Trabajarás en colaboración</strong> con personas de todo el mundo, haciendo Fork, Pull request y Merge. Además podrás alojar tu proyecto en un subdominio de GitHub, igual que lo está esta guía.</p>
+            <p>No encontrarás explicaciones teóricas explicando que es un sistema de control de versiones o funcionan las entrañas de GitHub. Pero sí encontrarás enlaces a varias fuentes en vídeo y texto que bien seguro te ayudarán asimilar mejor los conceptos.</p>
+        </div>
+    </article>
+    <article id='dos'>
+        <div class="encabezado">
+            <span class=''></span>
+            <h3>Iniciando</h3>
+        </div>
+        <div class="contenido">
+            <p>Esta guía básica te ayudará a <strong>usar GitHub con la terminal</strong> desde cero. En ella encontrarás un resumen de los pasos y comandos básicos necesarios para empezar a trabajar con GitHub desde tu ordenador con la terminal. Tanto si ya usas GitHub como si empiezas hoy mismo esta guía</p>
+            <p>Con esta guía empezarás un proyecto propio en local y subirás cambios a tu repositorio en GitHub. <strong>Trabajarás en colaboración</strong> con personas de todo el mundo, haciendo Fork, Pull request y Merge. Además podrás alojar tu proyecto en un subdominio de GitHub, igual que lo está esta guía.</p>
+            <p>No encontrarás explicaciones teóricas explicando que es un sistema de control de versiones o funcionan las entrañas de GitHub. Pero sí encontrarás enlaces a varias fuentes en vídeo y texto que bien seguro te ayudarán asimilar mejor los conceptos.</p>
+        </div>
+    </article>
+    <article id='tres'>
+        <div class="encabezado">
+            <span class=''></span>
+            <h3>Iniciando</h3>
+        </div>
+        <div class="contenido">
+            <p>Esta guía básica te ayudará a <strong>usar GitHub con la terminal</strong> desde cero. En ella encontrarás un resumen de los pasos y comandos básicos necesarios para empezar a trabajar con GitHub desde tu ordenador con la terminal. Tanto si ya usas GitHub como si empiezas hoy mismo esta guía</p>
+            <p>Con esta guía empezarás un proyecto propio en local y subirás cambios a tu repositorio en GitHub. <strong>Trabajarás en colaboración</strong> con personas de todo el mundo, haciendo Fork, Pull request y Merge. Además podrás alojar tu proyecto en un subdominio de GitHub, igual que lo está esta guía.</p>
+            <p>No encontrarás explicaciones teóricas explicando que es un sistema de control de versiones o funcionan las entrañas de GitHub. Pero sí encontrarás enlaces a varias fuentes en vídeo y texto que bien seguro te ayudarán asimilar mejor los conceptos.</p>
+        </div>
+    </article>
+    <article id='cuatro'>
         <div class="encabezado">
             <span class=''></span>
             <h3>Iniciando</h3>
@@ -76,6 +110,7 @@
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
 <script src="js/plugins-ck.js"></script>
 <script src="js/main-ck.js"></script>
+<script src="js/vendor/prefixfree.min.js"></script>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <script>
