Añadido botón para ir al inicio cuando haces scroll

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
+<div id='inicio'></div>
 <!--[if lt IE 7]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
@@ -92,6 +93,9 @@
         </div>
     </article>
 </section>
+<div class="boton">
+    <a href="#inicio"></a>
+</div>
 <footer>
     <div class="avatar">
         <img src="img/avatar.jpg" width='160' height='160' alt="Jordi Pàmies">
