Estilada cabecera de articles

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <meta charset="utf-8" />
     <title>IniciaGit: Hacer un commit es como pagar un tiro</title>
     <meta name="description" content="Incluso si eres principiante te va a resultar facil aprender a usar Github con esta guía." />
+    <meta autor='Jordi Pàmies' />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <link rel="stylesheet" href="css/normalize.css" />
-    <link href='http://fonts.googleapis.com/css?family=Lato:100|Lobster|Raleway:400,700' rel='stylesheet' type='text/css' />
+    <link href='http://fonts.googleapis.com/css?family=Lobster|Raleway:400,700' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/estilos.css">
 
@@ -27,8 +28,7 @@
 
 <header>
     <a href="#"><img src="img/logo.png" alt="Logo"></a>
-    <h1>IniciaGit</h1>
-    <h2>Hacer un commit es como pegar un tiro</h2>
+    <h1>IniciaGit<br><small>Hacer un commit es como pegar un tiro</small></h1>
 </header>
 <nav class="menu">
 <div class="lista"></div>
@@ -50,8 +50,10 @@
 <section>
     <article id='uno'>
         <div class="encabezado">
-            <span class=''></span>
-            <h3>Iniciando</h3>
+            <h2>
+                <span class='numero'>1</span>
+                <span class="nombre">Iniciando esto es la prueba de un titulo largo</span>
+            </h2>
         </div>
         <div class="contenido">
             <p>Esta guía básica te ayudará a <strong>usar GitHub con la terminal</strong> desde cero. En ella encontrarás un resumen de los pasos y comandos básicos necesarios para empezar a trabajar con GitHub desde tu ordenador con la terminal. Tanto si ya usas GitHub como si empiezas hoy mismo esta guía</p>
@@ -59,32 +61,10 @@
             <p>No encontrarás explicaciones teóricas explicando que es un sistema de control de versiones o funcionan las entrañas de GitHub. Pero sí encontrarás enlaces a varias fuentes en vídeo y texto que bien seguro te ayudarán asimilar mejor los conceptos.</p>
         </div>
     </article>
-    <article id='dos'>
+        <article id='uno'>
         <div class="encabezado">
             <span class=''></span>
-            <h3>Iniciando</h3>
-        </div>
-        <div class="contenido">
-            <p>Esta guía básica te ayudará a <strong>usar GitHub con la terminal</strong> desde cero. En ella encontrarás un resumen de los pasos y comandos básicos necesarios para empezar a trabajar con GitHub desde tu ordenador con la terminal. Tanto si ya usas GitHub como si empiezas hoy mismo esta guía</p>
-            <p>Con esta guía empezarás un proyecto propio en local y subirás cambios a tu repositorio en GitHub. <strong>Trabajarás en colaboración</strong> con personas de todo el mundo, haciendo Fork, Pull request y Merge. Además podrás alojar tu proyecto en un subdominio de GitHub, igual que lo está esta guía.</p>
-            <p>No encontrarás explicaciones teóricas explicando que es un sistema de control de versiones o funcionan las entrañas de GitHub. Pero sí encontrarás enlaces a varias fuentes en vídeo y texto que bien seguro te ayudarán asimilar mejor los conceptos.</p>
-        </div>
-    </article>
-    <article id='tres'>
-        <div class="encabezado">
-            <span class=''></span>
-            <h3>Iniciando</h3>
-        </div>
-        <div class="contenido">
-            <p>Esta guía básica te ayudará a <strong>usar GitHub con la terminal</strong> desde cero. En ella encontrarás un resumen de los pasos y comandos básicos necesarios para empezar a trabajar con GitHub desde tu ordenador con la terminal. Tanto si ya usas GitHub como si empiezas hoy mismo esta guía</p>
-            <p>Con esta guía empezarás un proyecto propio en local y subirás cambios a tu repositorio en GitHub. <strong>Trabajarás en colaboración</strong> con personas de todo el mundo, haciendo Fork, Pull request y Merge. Además podrás alojar tu proyecto en un subdominio de GitHub, igual que lo está esta guía.</p>
-            <p>No encontrarás explicaciones teóricas explicando que es un sistema de control de versiones o funcionan las entrañas de GitHub. Pero sí encontrarás enlaces a varias fuentes en vídeo y texto que bien seguro te ayudarán asimilar mejor los conceptos.</p>
-        </div>
-    </article>
-    <article id='cuatro'>
-        <div class="encabezado">
-            <span class=''></span>
-            <h3>Iniciando</h3>
+            <h2>Iniciando</h2>
         </div>
         <div class="contenido">
             <p>Esta guía básica te ayudará a <strong>usar GitHub con la terminal</strong> desde cero. En ella encontrarás un resumen de los pasos y comandos básicos necesarios para empezar a trabajar con GitHub desde tu ordenador con la terminal. Tanto si ya usas GitHub como si empiezas hoy mismo esta guía</p>
@@ -107,9 +87,6 @@
         <a class='email' href="mailto:jordipamies2@gmail.com">jpcpamies@me.com</a>
     </div>
 </footer>
-
-
-
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
 <script src="js/plugins-ck.js"></script>
