--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
             <p>No encontrarás explicaciones teóricas explicando que es un sistema de control de versiones o funcionan las entrañas de GitHub. Pero sí encontrarás enlaces a varias fuentes en vídeo y texto que bien seguro te ayudarán asimilar mejor los conceptos.</p>
         </div>
     </article>
-        <article id='uno'>
+    <article id='dos'>
         <div class="encabezado">
-            <span class=''></span>
-            <h2>Iniciando</h2>
+            <h2>
+                <span class='numero'>2</span>
+                <span class="nombre">Clases en vídeo</span>
+            </h2>
         </div>
         <div class="contenido">
-            <p>Esta guía básica te ayudará a <strong>usar GitHub con la terminal</strong> desde cero. En ella encontrarás un resumen de los pasos y comandos básicos necesarios para empezar a trabajar con GitHub desde tu ordenador con la terminal. Tanto si ya usas GitHub como si empiezas hoy mismo esta guía</p>
-            <p>Con esta guía empezarás un proyecto propio en local y subirás cambios a tu repositorio en GitHub. <strong>Trabajarás en colaboración</strong> con personas de todo el mundo, haciendo Fork, Pull request y Merge. Además podrás alojar tu proyecto en un subdominio de GitHub, igual que lo está esta guía.</p>
-            <p>No encontrarás explicaciones teóricas explicando que es un sistema de control de versiones o funcionan las entrañas de GitHub. Pero sí encontrarás enlaces a varias fuentes en vídeo y texto que bien seguro te ayudarán asimilar mejor los conceptos.</p>
+
         </div>
     </article>
 </section>
