Problema scroll congelado en navegador escritorio

--- a/index.html
+++ b/index.html
@@ -68,9 +68,15 @@
                 <span class="nombre">Clases en vídeo</span>
             </h2>
         </div>
-        <div class="contenido">
-
-        </div>
+        <div class="caja">
+            <h3>Introducción a Git + GitHub</h3>
+            <p class='autor'>Miguel Nieva @mikenieva</p>
+            <div class="video">
+                <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/C_xFDRsEM7A?controls=0&showinfo=0&color=white" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <p class='fecha'>Publicado el 09/02/2013</p>
+            <p>Una introducción a Git y GitHub, su utilidad y un pequeño ejercicio para instalar las llaves SSH y conectar repositorios.</p>
+       </div>
     </article>
 </section>
 <div class="boton">
