En este punto todo funciona bien
Pero los video responsive no estan acabados ya que el css de estos era
lo que había probocado el bug

--- a/index.html
+++ b/index.html
@@ -8,24 +8,20 @@
     <meta charset="utf-8" />
     <title>IniciaGit: Hacer un commit es como pagar un tiro</title>
     <meta name="description" content="Incluso si eres principiante te va a resultar facil aprender a usar Github con esta guía." />
-    <meta autor='Jordi Pàmies' />
+    <meta name="author" content="Jordi Pàmies" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
     <link rel="stylesheet" href="css/normalize.css" />
-    <link href='http://fonts.googleapis.com/css?family=Lobster|Raleway:400,700' rel='stylesheet' type='text/css' />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link href='http://fonts.googleapis.com/css?family=Lobster|Raleway' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="css/estilos.css">
 
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
-<div id='inicio'></div>
 <!--[if lt IE 7]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
-
+<div id='inicio'></div>
 <header>
     <a href="#"><img src="img/logo.png" alt="Logo"></a>
     <h1>IniciaGit<br><small>Hacer un commit es como pegar un tiro</small></h1>
@@ -76,7 +72,25 @@
             </div>
             <p class='fecha'>Publicado el 09/02/2013</p>
             <p>Una introducción a Git y GitHub, su utilidad y un pequeño ejercicio para instalar las llaves SSH y conectar repositorios.</p>
-       </div>
+        </div>
+        <div class="caja">
+            <h3>Git: Branches</h3>
+            <p class='autor'>Christian Van Der Henst @cvander - Miguel Nieva</p>
+            <div class="video">
+                <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/H5otM7wnvnM?controls=0&showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <p class='fecha'>Publicado el 09/02/2013</p>
+            <p>Una introducción a Git y GitHub, su utilidad y un pequeño ejercicio para instalar las llaves SSH y conectar repositorios.</p>
+        </div>
+        <div class="caja">
+            <h3>Colaboración con GitHub</h3>
+            <p class='autor'>Miguel Nieva @mikenieva</p>
+            <div class="video">
+                <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/MfYw97qPiEQ?controls=0&showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <p class='fecha'>Publicado el 09/02/2013</p>
+            <p>Una introducción a Git y GitHub, su utilidad y un pequeño ejercicio para instalar las llaves SSH y conectar repositorios.</p>
+        </div>
     </article>
 </section>
 <div class="boton">
@@ -95,9 +109,8 @@
 </footer>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-<script src="js/plugins-ck.js"></script>
-<script src="js/main-ck.js"></script>
-<script src="js/vendor/prefixfree.min.js"></script>
+<script src="js/plugins.js"></script>
+<script src="js/main.js"></script>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <script>
