--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <link rel="stylesheet" href="css/normalize.css" />
-    <link href='http://fonts.googleapis.com/css?family=Lobster|Raleway' rel='stylesheet' type='text/css' />
+    <link href='http://fonts.googleapis.com/css?family=Lobster|Raleway:400,700' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="css/estilos.css">
 
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
@@ -67,7 +67,7 @@
         <div class="caja">
             <h3>Introducción a Git + GitHub</h3>
             <p class='autor'>Miguel Nieva @mikenieva</p>
-            <div class="video">
+            <div class="contenedor">
                 <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/C_xFDRsEM7A?controls=0&showinfo=0&color=white" frameborder="0" allowfullscreen></iframe>
             </div>
             <p class='fecha'>Publicado el 09/02/2013</p>
@@ -76,7 +76,7 @@
         <div class="caja">
             <h3>Git: Branches</h3>
             <p class='autor'>Christian Van Der Henst @cvander - Miguel Nieva</p>
-            <div class="video">
+            <div class="contenedor">
                 <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/H5otM7wnvnM?controls=0&showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
             </div>
             <p class='fecha'>Publicado el 09/02/2013</p>
@@ -85,7 +85,7 @@
         <div class="caja">
             <h3>Colaboración con GitHub</h3>
             <p class='autor'>Miguel Nieva @mikenieva</p>
-            <div class="video">
+            <div class="contenedor">
                 <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/MfYw97qPiEQ?controls=0&showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
             </div>
             <p class='fecha'>Publicado el 09/02/2013</p>
