Corregidos varios detalles de estilo

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li><a href="#">Resumen de comandos</a></li>
         <Li><a class='capitulo' href="#">Más material</a></Li>
         <li><a href="#">Libros y guías</a></li>
-        <li><a href="#">Clases en vídeo</a></li>
+        <li><a href="#clases_en_video">Clases en vídeo</a></li>
         <li><a href="#">Ejercicios prácticos</a></li>
         <li><a href="#">Contáctame</a></li>
     </ul>
@@ -57,45 +57,44 @@
             <p>No encontrarás explicaciones teóricas explicando que es un sistema de control de versiones o funcionan las entrañas de GitHub. Pero sí encontrarás enlaces a varias fuentes en vídeo y texto que bien seguro te ayudarán asimilar mejor los conceptos.</p>
         </div>
     </article>
-    <article id='dos'>
+    <article id='clases_en_video'>
         <div class="encabezado">
             <h2>
                 <span class='numero'>2</span>
                 <span class="nombre">Clases en vídeo</span>
             </h2>
         </div>
-        <div class="caja">
-            <h3>Introducción a Git + GitHub</h3>
-            <p class='autor'>Miguel Nieva @mikenieva</p>
-            <div class="contenedor">
-                <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/C_xFDRsEM7A?controls=0&showinfo=0&color=white" frameborder="0" allowfullscreen></iframe>
+        <div class='horizontal'>
+            <div class="caja">
+                <h3>Introducción a Git + GitHub</h3>
+                <p class='autor'>Miguel Nieva @mikenieva</p>
+                <div class="contenedor">
+                    <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/C_xFDRsEM7A?controls=0&showinfo=0&color=white" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <p class='fecha'>Publicado el 09/02/2013</p>
+                <p class='resumen'>Una introducción a Git y GitHub, su utilidad y un pequeño ejercicio para instalar las llaves SSH y conectar repositorios.</p>
             </div>
-            <p class='fecha'>Publicado el 09/02/2013</p>
-            <p>Una introducción a Git y GitHub, su utilidad y un pequeño ejercicio para instalar las llaves SSH y conectar repositorios.</p>
-        </div>
-        <div class="caja">
-            <h3>Git: Branches</h3>
-            <p class='autor'>Christian Van Der Henst @cvander - Miguel Nieva</p>
-            <div class="contenedor">
-                <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/H5otM7wnvnM?controls=0&showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
+            <div class="caja">
+                <h3>Git: Branches</h3>
+                <p class='autor'>Christian Van Der Henst @cvander - Miguel Nieva</p>
+                <div class="contenedor">
+                    <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/H5otM7wnvnM?controls=0&showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <p class='fecha'>Publicado el 19/03/2013</p>
+                <p class='resumen'>Una clase especial dedicada a GitHub, Git y el comportamiento de los branches. Dirigida por Christian Van Der Henst y Miguel Nieva.</p>
             </div>
-            <p class='fecha'>Publicado el 09/02/2013</p>
-            <p>Una introducción a Git y GitHub, su utilidad y un pequeño ejercicio para instalar las llaves SSH y conectar repositorios.</p>
-        </div>
-        <div class="caja">
-            <h3>Colaboración con GitHub</h3>
-            <p class='autor'>Miguel Nieva @mikenieva</p>
-            <div class="contenedor">
-                <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/MfYw97qPiEQ?controls=0&showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
+            <div class="caja">
+                <h3>Colaboración con GitHub</h3>
+                <p class='autor'>Miguel Nieva @mikenieva</p>
+                <div class="contenedor">
+                    <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/MfYw97qPiEQ?controls=0&showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <p class='fecha'>Publicado el 14/05/2013</p>
+                <p class='resumen'>En esta ocasión, complementando a los materiales de GIT dentro de la plataforma, vemos la forma de colaborar en los proyectos estudiantiles.</p>
             </div>
-            <p class='fecha'>Publicado el 09/02/2013</p>
-            <p>Una introducción a Git y GitHub, su utilidad y un pequeño ejercicio para instalar las llaves SSH y conectar repositorios.</p>
         </div>
     </article>
 </section>
-<div class="boton">
-    <a href="#inicio"></a>
-</div>
 <footer>
     <div class="avatar">
         <img src="img/avatar.jpg" width='160' height='160' alt="Jordi Pàmies">
@@ -107,6 +106,9 @@
         <a class='email' href="mailto:jordipamies2@gmail.com">jpcpamies@me.com</a>
     </div>
 </footer>
+<div class="boton">
+    <a href="#inicio"></a>
+</div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
 <script src="js/plugins.js"></script>
