Añadidos libros y guías

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <li><a href="#">Vincular el ordenador con GitHub por SSH</a></li>
         <li><a href="#">Resumen de comandos</a></li>
         <Li><a class='capitulo' href="#">Más material</a></Li>
-        <li><a href="#">Libros y guías</a></li>
+        <li><a href="#libros_y_guias">Libros y guías</a></li>
         <li><a href="#clases_en_video">Clases en vídeo</a></li>
         <li><a href="#">Ejercicios prácticos</a></li>
         <li><a href="#">Contáctame</a></li>
@@ -68,7 +68,7 @@
             <div class="caja">
                 <h3>Introducción a Git + GitHub</h3>
                 <p class='autor'>Miguel Nieva @mikenieva</p>
-                <div class="contenedor">
+                <div class="contenedor_video">
                     <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/C_xFDRsEM7A?controls=0&showinfo=0&color=white" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <p class='fecha'>Publicado el 09/02/2013</p>
@@ -77,7 +77,7 @@
             <div class="caja">
                 <h3>Git: Branches</h3>
                 <p class='autor'>Christian Van Der Henst @cvander - Miguel Nieva</p>
-                <div class="contenedor">
+                <div class="contenedor_video">
                     <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/H5otM7wnvnM?controls=0&showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <p class='fecha'>Publicado el 19/03/2013</p>
@@ -86,11 +86,41 @@
             <div class="caja">
                 <h3>Colaboración con GitHub</h3>
                 <p class='autor'>Miguel Nieva @mikenieva</p>
-                <div class="contenedor">
+                <div class="contenedor_video">
                     <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/MfYw97qPiEQ?controls=0&showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <p class='fecha'>Publicado el 14/05/2013</p>
                 <p class='resumen'>En esta ocasión, complementando a los materiales de GIT dentro de la plataforma, vemos la forma de colaborar en los proyectos estudiantiles.</p>
+            </div>
+        </div>
+    </article>
+    <article id='libros_y_guias'>
+        <div class="encabezado">
+            <h2>
+                <span class='numero'>3</span>
+                <span class="nombre">Libros y guías</span>
+            </h2>
+        </div>
+        <div class='horizontal'>
+            <div class="caja">
+                <h3>Pro Git</h3>
+                <p class='autor'>Scott Chacon</p>
+                <div class="contenedor_imagen">
+                    <a href="http://git-scm.com/book/es?codekitCB=406257843.239258">
+                        <img src="http://git-scm.com/images/books/pro-git@2x.jpg" alt="Pro Git">
+                    </a>
+                </div>
+                <p class='fecha'>Publicado el 09/02/2013</p>
+                <p class='resumen'>El libro Git Pro entero, escrito por Scott Chacon y publicado por Apress, está disponible aquí. Todo el contenido está licenciado bajo la licencia Creative Commons Reconocimiento No comercial Compartir bajo la misma licencia 3.0.</p>
+            </div>
+            <div class="caja">
+                <h3>Git | La guía sencilla</h3>
+                <p class='autor'>Roger Dudler</p>
+                <div class="contenedor_imagen">
+                    <a class='guia' href="http://rogerdudler.github.io/git-guide/index.es.html"></a>
+                    <span>GUÍA</span>
+                </div>
+                <p class='resumen'>Una guía sencilla para comenzar con git. sin complicaciones ;)</p>
             </div>
         </div>
     </article>
