Mejoras de estilo en las cajas laterales

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <span class='numero'>2</span>
                 <span class="nombre">Clases en vídeo</span>
             </h2>
+            <div class="puntos"></div>
         </div>
         <div class='horizontal'>
             <div class="caja">
@@ -100,6 +101,7 @@
                 <span class='numero'>3</span>
                 <span class="nombre">Libros y guías</span>
             </h2>
+            <div class="puntos"></div>
         </div>
         <div class='horizontal'>
             <div class="caja">
@@ -131,9 +133,9 @@
         <p><strong>Jordi <br>Pàmies</strong></p>
     </div>
     <div class="social">
-        <a class='twitter' href="https://twitter.com/jpcpamies" target="_blank">@jpcpamies</a>
-        <a class='github' href="https://github.com/jpcpamies" target="_blank">/jpcpamies</a>
-        <a class='email' href="mailto:jordipamies2@gmail.com">jpcpamies@me.com</a>
+        <a class='twitter' href="https://twitter.com/jpcpamies" target="_blank"></a>
+        <a class='github' href="https://github.com/jpcpamies" target="_blank"></a>
+        <a class='email' href="mailto:jordipamies2@gmail.com"></a>
     </div>
 </footer>
 <div class="boton">
