Arreglos a la muesca del número de encabezado y arreglos al footer

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <div class="puntos"></div>
         </div>
         <div class='horizontal'>
+
             <div class="caja">
                 <h3>Introducción a Git + GitHub</h3>
                 <p class='autor'>Miguel Nieva @mikenieva</p>
@@ -75,6 +76,7 @@
                 <p class='fecha'>Publicado el 09/02/2013</p>
                 <p class='resumen'>Una introducción a Git y GitHub, su utilidad y un pequeño ejercicio para instalar las llaves SSH y conectar repositorios.</p>
             </div>
+
             <div class="caja">
                 <h3>Git: Branches</h3>
                 <p class='autor'>Christian Van Der Henst @cvander - Miguel Nieva</p>
@@ -84,6 +86,7 @@
                 <p class='fecha'>Publicado el 19/03/2013</p>
                 <p class='resumen'>Una clase especial dedicada a GitHub, Git y el comportamiento de los branches. Dirigida por Christian Van Der Henst y Miguel Nieva.</p>
             </div>
+
             <div class="caja">
                 <h3>Colaboración con GitHub</h3>
                 <p class='autor'>Miguel Nieva @mikenieva</p>
@@ -112,7 +115,6 @@
                         <img src="http://git-scm.com/images/books/pro-git@2x.jpg" alt="Pro Git">
                     </a>
                 </div>
-                <p class='fecha'>Publicado el 09/02/2013</p>
                 <p class='resumen'>El libro Git Pro entero, escrito por Scott Chacon y publicado por Apress, está disponible aquí. Todo el contenido está licenciado bajo la licencia Creative Commons Reconocimiento No comercial Compartir bajo la misma licencia 3.0.</p>
             </div>
             <div class="caja">
@@ -127,10 +129,13 @@
         </div>
     </article>
 </section>
+<div class="boton">
+    <a href="#inicio"></a>
+</div>
 <footer>
     <div class="avatar">
         <img src="img/avatar.jpg" width='160' height='160' alt="Jordi Pàmies">
-        <p><strong>Jordi <br>Pàmies</strong></p>
+        <p><strong>Jordi Pàmies</strong></p>
     </div>
     <div class="social">
         <a class='twitter' href="https://twitter.com/jpcpamies" target="_blank"></a>
@@ -138,9 +143,6 @@
         <a class='email' href="mailto:jordipamies2@gmail.com"></a>
     </div>
 </footer>
-<div class="boton">
-    <a href="#inicio"></a>
-</div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
 <script src="js/plugins.js"></script>
