--- a/index.html
+++ b/index.html
@@ -64,35 +64,31 @@
                 <span class="nombre">Clases en vídeo</span>
             </h2>
         </div>
-        <div class="caja">
-            <h3>Introducción a Git + GitHub</h3>
-            <div class="contenedor_video">
-                <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/C_xFDRsEM7A?controls=0&showinfo=0&color=white" frameborder="0" allowfullscreen></iframe>
+
+        <div class="sombra">
+            <div class="video">
+                <div class="contenedor_video">
+                    <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/C_xFDRsEM7A?controls=0&showinfo=0&color=white" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <h3>Introducción a Git + GitHub</h3>
             </div>
-            <p class='resumen'>Una introducción a Git y GitHub, su utilidad y un pequeño ejercicio para instalar las llaves SSH y conectar repositorios.</p>
-            <p class='autor'>Miguel Nieva @mikenieva</p>
-            <p class='fecha'>Publicado el 09/02/2013</p>
+            <div class="video">
+                <div class="contenedor_video">
+                    <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/H5otM7wnvnM?controls=0&showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <h3>Git: Branches</h3>
+            </div>
         </div>
-        <div class="caja">
-            <h3>Git: Branches</h3>
-            <div class="contenedor_video">
-                <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/H5otM7wnvnM?controls=0&showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
+        <div class="sombra">
+            <div class="video">
+                <div class="contenedor_video">
+                    <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/MfYw97qPiEQ?controls=0&showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <h3>Colaboración con GitHub</h3>
             </div>
-            <p class='resumen'>Una clase especial dedicada a GitHub, Git y el comportamiento de los branches. Dirigida por Christian Van Der Henst y Miguel Nieva.</p>
-            <p class='autor'>Christian Van Der Henst @cvander - Miguel Nieva</p>
-            <p class='fecha'>Publicado el 19/03/2013</p>
-        </div>
-        <div class="caja">
-            <h3>Colaboración con GitHub</h3>
-            <div class="contenedor_video">
-                <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/MfYw97qPiEQ?controls=0&showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
-            </div>
-            <p class='resumen'>En esta ocasión, complementando a los materiales de GIT dentro de la plataforma, vemos la forma de colaborar en los proyectos estudiantiles.</p>
-            <p class='autor'>Miguel Nieva @mikenieva</p>
-            <p class='fecha'>Publicado el 14/05/2013</p>
         </div>
     </article>
-    <article id='libros_y_guias'>
+<!--     <article id='libros_y_guias'>
         <div class="encabezado">
             <h2>
                 <span class='numero'>3</span>
@@ -122,7 +118,7 @@
                 <p class='resumen'>Una guía sencilla para comenzar con git. sin complicaciones ;)</p>
             </div>
         </div>
-    </article>
+    </article> -->
 </section>
 <div class="boton">
     <a href="#inicio"></a>
