Finalizado estilado videos vista tablet

--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
                 <h3>Git: Branches</h3>
             </div>
         </div>
-<!--         <div class="sombra">
+        <div class="sombra">
             <div class="video">
                 <div class="contenedor_video">
                     <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/MfYw97qPiEQ?controls=0&showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <h3>Colaboración con GitHub</h3>
             </div>
-        </div> -->
+        </div>
     </article>
 <!--     <article id='libros_y_guias'>
         <div class="encabezado">
