Estilados libros en vista tablet
Falta estilar la guía

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <div class="lista"></div>
     <ul id='mobileMenu'>
         <Li><a href="#uno">Iniciando</a></Li>
-        <Li><a class='capitulo' href="#dos">Empezando con Github</a></Li>
+<!--         <Li><a class='capitulo' href="#dos">Empezando con Github</a></Li>
         <li><a href="#tres">Crear una cuenta de Github</a></li>
         <li><a href="#cuatro">Instalar GitHub</a></li>
         <li><a href="#">Identificarse como usuario</a></li>
         <li><a href="#">Vincular el ordenador con GitHub por SSH</a></li>
         <li><a href="#">Resumen de comandos</a></li>
-        <Li><a class='capitulo' href="#">Más material</a></Li>
+        <Li><a class='capitulo' href="#">Más material</a></Li> -->
         <li><a href="#libros_y_guias">Libros y guías</a></li>
         <li><a href="#clases_en_video">Clases en vídeo</a></li>
         <li><a href="#">Ejercicios prácticos</a></li>
@@ -65,7 +65,7 @@
             </h2>
         </div>
 
-        <div class="sombra">
+        <div class="contenidos">
             <div class="video">
                 <div class="contenedor_video">
                     <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/C_xFDRsEM7A?controls=0&showinfo=0&color=white" frameborder="0" allowfullscreen></iframe>
@@ -79,7 +79,7 @@
                 <h3>Git: Branches</h3>
             </div>
         </div>
-        <div class="sombra">
+        <div class="contenidos">
             <div class="video">
                 <div class="contenedor_video">
                     <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/MfYw97qPiEQ?controls=0&showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
@@ -88,37 +88,32 @@
             </div>
         </div>
     </article>
-<!--     <article id='libros_y_guias'>
+    <article id='libros_y_guias'>
         <div class="encabezado">
             <h2>
                 <span class='numero'>3</span>
                 <span class="nombre">Libros y guías</span>
             </h2>
-            <div class="puntos"></div>
         </div>
-        <div class='horizontal'>
-            <div class="caja">
-                <h3>Pro Git</h3>
-                <p class='autor'>Scott Chacon</p>
+        <div class="contenidos">
+            <div class="video">
                 <div class="contenedor_imagen">
                     <a href="http://git-scm.com/book/es?codekitCB=406257843.239258">
-                        <img src="http://git-scm.com/images/books/pro-git@2x.jpg" alt="Pro Git">
+                        <img src="http://git-scm.com/images/books/pro-git@2x.jpg" alt="Pro Git" />
                     </a>
                 </div>
-                <p class='resumen'>El libro Git Pro entero, escrito por Scott Chacon y publicado por Apress, está disponible aquí. Todo el contenido está licenciado bajo la licencia Creative Commons Reconocimiento No comercial Compartir bajo la misma licencia 3.0.</p>
+                <h3 class='libro'>Pro Git</h3>
             </div>
-            
-            <div class="caja">
-                <h3>Git | La guía sencilla</h3>
-                <p class='autor'>Roger Dudler</p>
+            <div class="video">
                 <div class="contenedor_imagen">
-                    <a class='guia' href="http://rogerdudler.github.io/git-guide/index.es.html"></a>
-                    <span>GUÍA</span>
+                    <a href="http://rogerdudler.github.io/git-guide/index.es.html">
+                        <img src="http://git-scm.com/images/books/pro-git@2x.jpg" alt="Pro Git" />
+                    </a>
                 </div>
-                <p class='resumen'>Una guía sencilla para comenzar con git. sin complicaciones ;)</p>
+                <h3 class='libro'>Git | La guía sencilla</h3>
             </div>
         </div>
-    </article> -->
+    </article>
 </section>
 <div class="boton">
     <a href="#inicio"></a>
