Estilado guía en vista tablet

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="lista"></div>
     <ul id='mobileMenu'>
         <Li><a href="#uno">Iniciando</a></Li>
-<!--         <Li><a class='capitulo' href="#dos">Empezando con Github</a></Li>
+        <!-- <Li><a class='capitulo' href="#dos">Empezando con Github</a></Li>
         <li><a href="#tres">Crear una cuenta de Github</a></li>
         <li><a href="#cuatro">Instalar GitHub</a></li>
         <li><a href="#">Identificarse como usuario</a></li>
@@ -98,7 +98,7 @@
         <div class="contenidos">
             <div class="video">
                 <div class="contenedor_imagen">
-                    <a href="http://git-scm.com/book/es?codekitCB=406257843.239258">
+                    <a href="http://git-scm.com/book/es?codekitCB=406257843.239258" target='blanck'>
                         <img src="http://git-scm.com/images/books/pro-git@2x.jpg" alt="Pro Git" />
                     </a>
                 </div>
@@ -106,8 +106,8 @@
             </div>
             <div class="video">
                 <div class="contenedor_imagen">
-                    <a href="http://rogerdudler.github.io/git-guide/index.es.html">
-                        <img src="http://git-scm.com/images/books/pro-git@2x.jpg" alt="Pro Git" />
+                    <a href="http://rogerdudler.github.io/git-guide/index.es.html" target='blanck'>
+                        <img src="img/guia.png" alt="Pro Git" />
                     </a>
                 </div>
                 <h3 class='libro'>Git | La guía sencilla</h3>
