--- a/index.html
+++ b/index.html
@@ -65,8 +65,27 @@
             </h2>
         </div>
         <div class="materiales">
-            
-            
+
+            <div class="video">
+                <div class="contenedor">
+                    <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/C_xFDRsEM7A?showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <p>Introducción a Git + GitHub</p>
+            </div>
+
+            <div class="video">
+                <div class="contenedor">
+                    <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/H5otM7wnvnM?showinfo=0&color=white&heme=light" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <p>Git: Branches</p>
+            </div>
+
+            <div class="video">
+                <div class="contenedor">
+                    <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/MfYw97qPiEQ?showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <p>Colaboración con GitHub</p>
+            </div>
         </div>
     </article>
     <article id='libros_y_guias'>
