Libros y guías estilados en vista movil

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
             <div class="video">
                 <div class="contenedor">
-                    <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/H5otM7wnvnM?showinfo=0&color=white&heme=light" frameborder="0" allowfullscreen></iframe>
+                    <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/H5otM7wnvnM?showinfo=0&color=white&theme=light" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <p>Git: Branches</p>
             </div>
@@ -96,7 +96,19 @@
             </h2>
         </div>
         <div class="materiales">
-            
+            <div class="libro">
+                <div class="contenedor">
+                    <a href="http://git-scm.com/book/es?codekitCB=406257843.239258"><img src="http://git-scm.com/images/books/pro-git@2x.jpg" alt="Pro Git"></a>
+                </div>
+                <p>Por Git</p>
+            </div>
+            <div class="libro">
+                <div class="contenedor">
+                    <a href="http://rogerdudler.github.io/git-guide/index.es.html"><img src="img/guia.png" alt="Git - La guía sencilla"></a>
+                </div>
+                <p>Git - La guía sencilla</p>
+            </div>
+
         </div>
     </article>
 </section>
