Estilando vista escritorio

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     <h1>IniciaGit<br><small>Hacer un commit es como pegar un tiro</small></h1>
 </header>
 <nav class="menu">
-    <div class="lista"></div>
     <ul id='mobileMenu'>
         <Li><a href="#uno">Iniciando</a></Li>
         <!-- <Li><a class='capitulo' href="#dos">Empezando con Github</a></Li>
@@ -40,7 +39,7 @@
         <li><a href="#clases_en_video">Clases en vídeo</a></li>
         <li><a href="#libros_y_guias">Libros y guías</a></li>
         <li><a href="#">Ejercicios prácticos</a></li>
-        <li><a href="#">Contáctame</a></li>
+        <li><a href="#footer">Contáctame</a></li>
     </ul>
 </nav>
 <section>
@@ -115,7 +114,7 @@
 <div class="boton">
     <a href="#inicio"></a>
 </div>
-<footer>
+<footer id='footer'>
     <div class="avatar">
         <img src="img/avatar.jpg" width='160' height='160' alt="Jordi Pàmies">
         <p><strong>Jordi Pàmies</strong></p>
