Estilado footer vista escritorio

--- a/index.html
+++ b/index.html
@@ -28,18 +28,17 @@
 </header>
 <nav class="menu">
     <ul id='mobileMenu'>
-        <Li><a href="#uno">Iniciando</a></Li>
-        <!-- <Li><a class='capitulo' href="#dos">Empezando con Github</a></Li>
-        <li><a href="#tres">Crear una cuenta de Github</a></li>
-        <li><a href="#cuatro">Instalar GitHub</a></li>
-        <li><a href="#">Identificarse como usuario</a></li>
-        <li><a href="#">Vincular el ordenador con GitHub por SSH</a></li>
-        <li><a href="#">Resumen de comandos</a></li>
-        <Li><a class='capitulo' href="#">Más material</a></Li> -->
-        <li><a href="#clases_en_video">Clases en vídeo</a></li>
-        <li><a href="#libros_y_guias">Libros y guías</a></li>
-        <li><a href="#">Ejercicios prácticos</a></li>
-        <li><a href="#footer">Contáctame</a></li>
+        <Li class='capitulo'><a href="#uno">Iniciando</a></Li>
+        <Li><a class='capitulo' href="#dos">Empezando con Github <span>1</span></a></Li>
+        <li class='tema'><a href="#tres">Crear una cuenta de Github</a></li>
+        <li class='tema'><a href="#cuatro">Instalar GitHub</a></li>
+        <li class='tema'><a href="#">Identificarse como usuario</a></li>
+        <li class='tema'><a href="#">Vincular el ordenador con GitHub por SSH</a></li>
+        <li class='oro'><a href="#">Resumen de comandos</a></li>
+        <li class='tema'><a href="#clases_en_video">Clases en vídeo</a></li>
+        <li class='tema'><a href="#libros_y_guias">Libros y guías</a></li>
+        <li class='tema'><a href="#">Ejercicios prácticos</a></li>
+        <li class='contacto'><a href="#footer">Contáctame</a></li>
     </ul>
 </nav>
 <section>
