--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </header>
 <nav class="menu">
     <ul id='mobileMenu'>
-        <Li class='capitulo'><a href="#uno">Iniciando</a></Li>
+        <Li class='capitulo'><a href="#iniciando">Iniciando</a></Li>
         <Li><a class='capitulo' href="#dos">Empezando con Github <span>1</span></a></Li>
         <li class='tema'><a href="#tres">Crear una cuenta de Github</a></li>
         <li class='tema'><a href="#cuatro">Instalar GitHub</a></li>
@@ -42,7 +42,7 @@
     </ul>
 </nav>
 <section>
-    <article id='uno'>
+    <article id='iniciando'>
         <div class="encabezado">
             <h2>
                 <span class='numero'>1</span>
