--- a/index.html
+++ b/index.html
@@ -28,21 +28,20 @@
 </header>
 <nav class="menu">
     <ul id='mobileMenu'>
-        <Li class='capitulo'><a href="#iniciando">Iniciando</a></Li>
-        <Li><a class='capitulo' href="#dos">Empezando con Github <span>1</span></a></Li>
+        <Li class='capitulo'><a href="#uno">Iniciando</a></Li>
+      <!--   <Li><a class='capitulo' href="#dos">Empezando con Github <span>1</span></a></Li>
         <li class='tema'><a href="#tres">Crear una cuenta de Github</a></li>
         <li class='tema'><a href="#cuatro">Instalar GitHub</a></li>
         <li class='tema'><a href="#">Identificarse como usuario</a></li>
-        <li class='tema'><a href="#">Vincular el ordenador con GitHub por SSH</a></li>
-        <li class='oro'><a href="#">Resumen de comandos</a></li>
-        <li class='tema'><a href="#clases_en_video">Clases en vídeo</a></li>
-        <li class='tema'><a href="#libros_y_guias">Libros y guías</a></li>
-        <li class='tema'><a href="#">Ejercicios prácticos</a></li>
-        <li class='contacto'><a href="#footer">Contáctame</a></li>
+        <li class='tema'><a href="#">Vincular el ordenador con GitHub por SSH</a></li> -->
+        <!-- <li class='oro'><a href="#">Resumen de comandos</a></li> -->
+        <li class='tema'><a href="#dos">Clases en vídeo</a></li>
+        <li class='tema'><a href="#tres">Libros y guías</a></li>
+<!--         <li class='tema'><a href="#">Ejercicios prácticos</a></li> -->
     </ul>
 </nav>
 <section>
-    <article id='iniciando'>
+    <article id='uno'>
         <div class="encabezado">
             <h2>
                 <span class='numero'>1</span>
@@ -55,7 +54,7 @@
             <p>No encontrarás explicaciones teóricas explicando que es un sistema de control de versiones o funcionan las entrañas de GitHub. Pero sí encontrarás enlaces a varias fuentes en vídeo y texto que bien seguro te ayudarán asimilar mejor los conceptos.</p>
         </div>
     </article>
-    <article id='clases_en_video'>
+    <article id='dos'>
         <div class="encabezado">
             <h2>
                 <span class='numero'>2</span>
@@ -86,7 +85,7 @@
             </div>
         </div>
     </article>
-    <article id='libros_y_guias'>
+    <article id='tres'>
         <div class="encabezado">
             <h2>
                 <span class='numero'>3</span>
