Estilando menu escritorio
Añadido dos font face. Pendiente de unificarlo en uno solo

--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
 </header>
 <nav class="menu">
     <ul id='mobileMenu'>
-        <Li class='capitulo'><a href="#uno">Iniciando</a></Li>
-      <!--   <Li><a class='capitulo' href="#dos">Empezando con Github <span>1</span></a></Li>
-        <li class='tema'><a href="#tres">Crear una cuenta de Github</a></li>
-        <li class='tema'><a href="#cuatro">Instalar GitHub</a></li>
-        <li class='tema'><a href="#">Identificarse como usuario</a></li>
-        <li class='tema'><a href="#">Vincular el ordenador con GitHub por SSH</a></li> -->
-        <!-- <li class='oro'><a href="#">Resumen de comandos</a></li> -->
-        <li class='tema'><a href="#dos">Clases en vídeo</a></li>
-        <li class='tema'><a href="#tres">Libros y guías</a></li>
+        <Li><a class='capitulo' href="#uno">Iniciando</a></Li>
+        <Li><a class='capitulo' href="#dos">Empezando con Github <span>1</span></a></Li>
+            <ul>
+                <li><a class='tema' href="#tres">Crear una cuenta de Github</a></li>
+                <li><a class='tema' href="#cuatro">Instalar GitHub</a></li>
+                <li><a class='tema' href="#">Identificarse como usuario</a></li>
+                <li><a class='tema' href="#">Vincular el ordenador con GitHub por SSH</a></li>
+            </ul>
+        <!-- <li><a  class='oro' href="#">Resumen de comandos</a></li> -->
+        <li><a class='capitulo' href="#dos">Clases en vídeo</a></li>
+        <li><a class='capitulo' href="#tres">Libros y guías</a></li>
 <!--         <li class='tema'><a href="#">Ejercicios prácticos</a></li> -->
     </ul>
 </nav>
