Mejoras de estilo en menú escritorio

--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
 </header>
 <nav class="menu">
     <ul id='mobileMenu'>
-        <Li><a class='capitulo' href="#uno">Iniciando</a></Li>
-        <Li><a class='capitulo' href="#dos">Empezando con Github <span>1</span></a></Li>
+        <Li><a class='solo iniciando' href="#uno">Iniciando</a></Li>
+        <li><a class='solo video' href="#dos">Clases en vídeo</a></li>
+        <li><a class='solo libro' href="#tres">Libros y guías</a></li>
+        <Li><a class='capitulo uno' href="#dos">Empezando con Github</a></Li>
             <ul>
                 <li><a class='tema' href="#tres">Crear una cuenta de Github</a></li>
                 <li><a class='tema' href="#cuatro">Instalar GitHub</a></li>
                 <li><a class='tema' href="#">Identificarse como usuario</a></li>
                 <li><a class='tema' href="#">Vincular el ordenador con GitHub por SSH</a></li>
             </ul>
-        <!-- <li><a  class='oro' href="#">Resumen de comandos</a></li> -->
-        <li><a class='capitulo' href="#dos">Clases en vídeo</a></li>
-        <li><a class='capitulo' href="#tres">Libros y guías</a></li>
-<!--         <li class='tema'><a href="#">Ejercicios prácticos</a></li> -->
+        <li><a  class='oro' href="#">Resumen de comandos</a></li>
+<!--         <li class='solo ejercicio'><a href="#">Ejercicios prácticos</a></li> -->
     </ul>
 </nav>
 <section>
     <article id='uno'>
         <div class="encabezado">
             <h2>
-                <span class='numero'>1</span>
+                <span class='numero'></span>
                 <span class="nombre">Iniciando esto es la prueba de un titulo largo</span>
             </h2>
         </div>
@@ -59,7 +59,7 @@
     <article id='dos'>
         <div class="encabezado">
             <h2>
-                <span class='numero'>2</span>
+                <span class='numero'>1</span>
                 <span class="nombre">Clases en vídeo</span>
             </h2>
         </div>
