Mejoras de estilo generales

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <article id='uno'>
         <div class="encabezado">
             <h2>
-                <span class='numero'></span>
+                <span class='numero iniciando'></span>
                 <span class="nombre">Iniciando esto es la prueba de un titulo largo</span>
             </h2>
         </div>
